# noisy-emcom

./: .gitignore  README.md  main.py  pyproject.toml  run_slurm.sh
src/noisy_emcom/agents/: agent_factory.py  lewis_game_agent.py
src/noisy_emcom/configs/: etl_config.py  lg_base_config.py  lg_rlrl_config.py  lg_rlss_config.py  nlg_rlrl_config.py
src/noisy_emcom/experiments/: eol_experiment.py  eol_experiment_test.py  lewis_experiment.py  lewis_experiment_test.py
src/noisy_emcom/losses/: listeners.py  speakers.py
src/noisy_emcom/networks/: cores.py  heads.py  listeners.py  speakers.py  torsos.py
src/noisy_emcom/trainers/: communication_trainer.py  imitation_trainer.py  reset_opt_trainer.py  reset_trainer.py
src/noisy_emcom/utils/: channels.py  checkpointer.py  config.py  eval_utils.py  experiment_with_checkpointing.py  language_measures.py  policy_actuator.py  population_storage.py  rewards.py  scalers.py  types.py  utils.py
src/noisy_emcom/utils/dataset_tools/: celeba.py
